# ResonanceForge

./: CLAUDE.md  README.md  pyproject.toml  resonanceforge.bat
.github/workflows/: ci.yml
resonanceforge/: __init__.py  cli.py  config.py  gui.py  modules.py  pipeline.py
resonanceforge/presets/: club_-9.json  streaming_-14.json  vinyl.json
scripts/: setup.sh
tests/: test_config_roundtrip.py  test_pipeline_smoke.py  test_quality.py
