[project]
name = "resonanceforge"
version = "0.1.0"
description = "Mastering / post-production DSP pipeline"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "soundfile>=0.12",
    "pedalboard>=0.9",
    "pyloudnorm>=0.1.1",
]

[project.scripts]
resonanceforge = "resonanceforge.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["resonanceforge*"]
